--- a/training/requirements.txt
+++ b/training/requirements.txt
@@ -1,7 +1,10 @@
 boto3>=1.18.0
 sagemaker>=2.48.0
-torch>=1.9.0
-transformers>=4.9.0
-datasets>=1.11.0
+torch>=1.11.0
+transformers==4.20.1
+datasets==2.11.0
 tqdm>=4.41.0
 argparse
+librosa==0.9.2
+soundfile>=0.10.2
+numba>=0.53
